application erb to slim

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -24,7 +24,7 @@
             a = fa_icon 'plus'
             
         span.comment
-          a.comment-link 100 comments
+          a.comment-link href="#" 100 comments
           
         .comment-box
           = form_tag do
