added user sessions

--- a/app/views/application/_photo_form.html.slim
+++ b/app/views/application/_photo_form.html.slim
@@ -21,13 +21,13 @@
                 = f.label :title
                 .form-photo-field
                   = fa_icon 'link', class: 'form-photo-icon'
-                  = f.text_field :title, class: 'form-control form-photo-textfield', autocomplete: 'off'
+                  = f.text_field :title, class: 'form-control form-photo-text-field', autocomplete: 'off'
               
               .form-group
                 = f.label :url
                 .form-photo-field
                   = fa_icon 'link', class: 'form-photo-icon'
-                  = f.text_field :url, class: 'form-control form-photo-textfield'  
+                  = f.text_field :url, class: 'form-control form-photo-text-field'  
               
               .form-group
                 = f.label :description
