--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -5,18 +5,21 @@ header
     .container-fluid
     
       .navbar-header
+      
         button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"
           span.sr-only Toggle navigation
           span.icon-bar
           span.icon-bar
           span.icon-bar
+          
         = link_to fa_icon('camera-retro', text: 'Photo Paradise'), root_path, class: 'navbar-brand'
       
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
+      
         ul.nav.navbar-nav
 
         ul.nav.navbar-nav.navbar-right
           li
-            a href="#" Login
+            = link_to 'Login', login_path
           li
-            a href="#" Register
+            = link_to 'Register', register_path
