--- a/app/assets/stylesheets/application/controller/pages/index.scss
+++ b/app/assets/stylesheets/application/controller/pages/index.scss
@@ -47,3 +47,18 @@
     margin-bottom: 5px;
   }
 }
+
+.search-box {
+  position: relative;
+
+  & .search-icon-spinner {
+    position: absolute;
+    z-index: 2;
+    top: 10px;
+    left: 10px;
+    display: none;
+  }
+
+  & .search-field {
+  }
+}
